--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
     url = "https://github.com/rstudio/blogdown"
 [[menu.main]]
     name = "Twitter"
-    url = "https://twitter.com/rstudio"
+    url = "https://twitter.com/dziennikarz"
 
 [params]
     description = "A website built through Hugo and blogdown."
