--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "/"
+baseurl = "https://dziennikarz.pl"
 relativeurls = true
 languageCode = "pl-pl"
 title = "Dziennikarz.pl"
@@ -9,6 +9,7 @@ ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
 
 [permalinks]
     post = "/:year/:month/:day/:slug/"
+    page = "/:title/"
 
 [[menu.main]]
     name = "About"
@@ -20,15 +21,8 @@ ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
 
 [params]
     description = "Strona zbudowana przez Hugo i blogdown."
+    favicon = "favicon.ico"
 
-    # options for highlight.js (version, additional languages, and theme)
-    highlightjsVersion = "9.11.0"
-    highlightjsCDN = "//cdn.bootcss.com"
-    highlightjsLang = ["r", "yaml"]
-    highlightjsTheme = "github"
-
-    MathJaxCDN = "//cdn.bootcss.com"
-    MathJaxVersion = "2.7.1"
 
     [params.logo]
     # url = "logo.png"
@@ -37,3 +31,5 @@ ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
     height = 50
     alt = "Logo"
 
+[params.icon]
+    url = "favicon.ico"
