Sprzątam i usuwam (na chwilę) dwa niedziałające posty: mapa w R w kilku krokach i zamach majowy ma Twitterze

--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseurl = "https://dziennikarz.pl"
 relativeurls = true
 languageCode = "pl-pl"
 title = "Dziennikarz.pl"
-theme = "hugo-lithium-theme"
+theme = "blackburn"
 googleAnalytics = "UA-73680-1"
 disqusShortname = "dziennikarz"
 ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
